# inkscape-mcp

./: .gitignore  .gitleaks.toml  .gitmessage  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  BUILD_LOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCKER_PLAN.md  Dockerfile  INKSCAPE_MCP_TECHNICAL_SPEC.md  INSTALL.md  PRD.md  PUBLISH.md  README.md  build.ps1  build.sh  claude_desktop_config.json  cursor-mcp-config.json  docker-compose.yml  extension.toml  glama.json  inkscape-mcp-backend.spec  justfile  llms-full.txt  llms.txt  package-lock.json  pyproject.toml  pyproject.toml.backup  pyproject_20260407_125332.toml.bak  pyproject_20260407_125335.toml.bak  pyproject_20260407_125340.toml.bak  pytest.ini  ruff.toml  run_server.py  start.ps1  start.ps1.bak.20260508_202255  (+7 more)
.github/: labeler.yml
.github/workflows/: build.yml  ci.yml  code-quality.yml  dependencies.yml  docker-publish.yml  mcpb-pack.yml  pr-management.yml  publish.yml  release.yml  security.yml
_llm_test_scripts/: test_crest.py
docs/: AI_SAMPLING.md  AI_SVG_CONSTRUCTION_PLAN.md  API.md  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  CONFIGURATION.md  DEVELOPMENT.md  FEATURES.md  IDE_MCP.md  INKSCAPE.md  INSTALL.md  MCPB.md  README.md  ROADMAP.md  TOOLS.md  TROUBLESHOOTING.md  TROUBLESHOOTING_20260407_180810.md.bak  USAGE.md  publishing-plan.md
hooks/: runtime-opentelemetry.py
mcp-server/: README.md  config.yaml  manifest.json
mcp-server/assets/prompts/: configuration.md  examples.json  quick-start.md  system.md  troubleshooting.md  user.md
mcp-server/src/inkscape_mcp/: __init__.py  agentic.py  app.py  cli_wrapper.py  config.py  inkscape_detector.py  logging_config.py  main.py  py.typed  server.py  shell_wrapper.py  tool_utils.py  transport.py
mcp-server/src/inkscape_mcp/plugins/: README.md  ag_batch_trace.py  ag_color_quantize.py  ag_layer_animation.py  extension_manager.py
mcp-server/src/inkscape_mcp/skills/: SKILL.md
mcp-server/src/inkscape_mcp/tools/: __init__.py  analysis.py  file_operations.py  fleet_tools.py  heraldry.py  layer_operations.py  llm_discovery.py  render_tools.py  sim_art_tools.py  system.py  vector_operations.py
mcp-server/src/inkscape_mcp/tools_legacy/: __init__.py  base.py  batch_processing.py  color_adjustments_final_fix.py  file_operations.py  file_operations_base.py  file_operations_tools.py  file_operations_tools_fixed.py  filters_fixed.py  help_tools.py  image_analysis.py  layer_management.py  (+2 more)
mcpb/: README.md  manifest.json  pyproject.toml
mcpb/assets/prompts/: examples.json  system.md  user.md
mcpb/src/: __init__.py  agentic.py  app.py  cli_wrapper.py  config.py  logging_config.py  main.bak  main.py  main_20260407_125431.py.bak  main_20260407_131046.py.bak  prefab.py  prompts_resources.py  server.py  shell_wrapper.py  tool_utils.py  transport.py
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail.yml
native/: Cargo.toml  build.ps1  tauri.conf.json  tauri.conf.json.20260618_114400.bak
native/capabilities/: default.json
native/resources/: .env.example
native/scripts/: build-desktop.ps1
native/src/: backend.rs  backend.rs.20260617-014834.bak
native/windows/: hooks.nsh
scripts/: capture-demo.ps1  cua-nsis-config.json  cua-smoke.py  fleet_e2e_smoke.py  fleet_pipeline.py  run-fleet-pipeline.ps1  screenshot-pages.ps1  smoke_test.py
scripts/just/: fleet.just
src/: lib.rs
src/gimp_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/inkscape_mcp/: __init__.py  agentic.py  app.py  cli_wrapper.py  config.py  inkscape_detector.py  logging_config.py  main.py  main_20260407_125419.py.bak  mcp_tool_types.py  prefab.py  prompts_resources.py  server.py  shell_wrapper.py  tool_utils.py  transport.py
src/inkscape_mcp/plugins/: __init__.py  ag_batch_trace.inx  ag_batch_trace.py  ag_color_quantize.inx  ag_color_quantize.py  ag_layer_animation.inx  ag_layer_animation.py  ag_unity_prep.inx  ag_unity_prep.py  base_plugin.py  extension_manager.py  layer_plugin.py
src/inkscape_mcp/tools/: __init__.py  analysis.py  animation.py  batch.py  color.py  fab_art_tools.py  file_operations.py  filter.py  heraldry.py  layer.py  render_tools.py  sim_art_tools.py  system.py  transform.py  validation_tools.py  vector_operations.py
src/inkscape_mcp/tools_legacy/: __init__.py  base.py  batch_processing.py  brightness_contrast.py  color_adjustments.py  color_adjustments_final_fix.py  color_adjustments_fixed.py  file_operations.py  file_operations.py.bak  file_operations_base.py  file_operations_tools.py  file_operations_tools.py.backup_20250916_152109  file_operations_tools_fixed.py  filters.py  filters_fixed.py  help_tools.py  image_analysis.py  layer_management.py  performance_tools.py  status_tools.py  transforms.py  transforms.py.bak  transforms_fixed.py
src/inkscape_mcp/utils/: ai_svg_handoff.py  execution_mode.py  fab_art_presets.py  fleet_e2e_offline.py  fleet_handoff.py  fleet_http.py  fleet_pipeline.py  structured_logging.py  svg_pack_audit.py  svg_pack_presets.py  telemetry.py
tests/: conftest.py
tests/fixtures/: svg_fixtures.py
tests/integration/: test_full_workflow.py
tests/unit/: test_cli_wrapper.py  test_config.py  test_detector.py  test_fleet_tools.py  test_phase1_tools.py  test_phase4_tools.py  test_phase5_tools.py  test_phase6_tools.py  test_validation_tools.py  test_vector_operations.py
tools/: expand_mcpb_examples.py  pack_mcpb.py  sync_mcpb_src.py
web_sota/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  start.ps1  vite.config.ts
web_sota/backend/: server.py  start.ps1
web_sota/e2e/: demo-screenshots.spec.ts  demo-video.spec.ts  smoke.spec.ts
web_sota/src/: App.tsx  index.css  vite-env.d.ts
web_sota/src/api/: mcp.ts
web_sota/src/common/: mcp-client.ts
web_sota/src/lib/: api.ts  store.ts  use-zoom.ts
web_sota/src/pages/: Logging.tsx  actions.tsx  actions.tsx.bak  agent-tools.tsx  animation.tsx  chat.tsx  dashboard.tsx  help.tsx  layers.tsx  logs.tsx  settings.tsx  status.tsx  status.tsx.bak  svg-studio.tsx  svg-studio.tsx.bak
(+38 files in other folders)
