[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inkscape-mcp"
version = "1.2.0b0"
description = "FastMCP 2.14.3+ server for professional vector graphics and SVG editing using Inkscape - portmanteau architecture"
readme = "README.md"
authors = [
    {name = "Sandra Schipal", email = "sandra@sandraschi.dev"},
    {name = "FastMCP Community", email = "fastmcp@example.com"}
]
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Content Creators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core FastMCP dependencies - upgraded to 2.14.3+
    "fastmcp>=2.14.3,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "typing-extensions>=4.5.0,<5.0.0",
    
    # Image processing
    "pillow>=10.0.0,<12.0.0",
    "numpy>=1.24.0,<3.0.0",
    
    # Process management and system utilities
    "psutil>=5.9.0,<7.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    
    # File handling and validation
    "python-magic>=0.4.27,<1.0.0; platform_system!='Windows'",
    "python-magic-bin>=0.4.14,<1.0.0; platform_system=='Windows'",
    "filetype>=1.2.0,<2.0.0",
    
    # Configuration and utilities
    "pyyaml>=6.0.0,<7.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "click>=8.1.3,<9.0.0",
    
    # Async utilities
    "anyio>=4.5.0,<5.0.0",
    "httpx>=0.27.0,<1.0.0"
]

[project.urls]
Homepage = "https://github.com/sandraschi/inkscape-mcp"
Documentation = "https://github.com/sandraschi/inkscape-mcp#readme"
Issues = "https://github.com/sandraschi/inkscape-mcp/issues"
Source = "https://github.com/sandraschi/inkscape-mcp"

[project.scripts]
"inkscape-mcp" = "inkscape_mcp.main:main"

[project.urls]
Homepage = "https://github.com/sandraschi/inkscape-mcp"
Documentation = "https://github.com/sandraschi/inkscape-mcp#readme"
Repository = "https://github.com/sandraschi/inkscape-mcp"
Issues = "https://github.com/sandraschi/inkscape-mcp/issues"
Changelog = "https://github.com/sandraschi/inkscape-mcp/blob/main/CHANGELOG.md"

# Tool definitions for MCPB and other tool managers
[tool.hatch]
metadata.hooks.fancy-pypi-readme = { content-type = "text/markdown" }

[tool.hatch.build.targets.wheel]
packages = ["src/inkscape_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "hatchling>=1.21.0",
    "build>=1.2.0",
    "twine>=5.0.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

# PyPI Publishing Configuration
[tool.hatch.build.targets.wheel]
packages = ["src/inkscape_mcp"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/inkscape_mcp/__init__.py"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "N", "UP", "B", "C4", "ARG", "PTH", "ERA"
]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastmcp.FastMCP"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["inkscape_mcp"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.optional-dependencies]
# HTTP server support
http = [
    "fastapi>=0.95.0,<1.0.0",
    "uvicorn[standard]>=0.22.0,<1.0.0",
    "httpx>=0.24.0,<1.0.0"
]

dev = [
    # Testing
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "pytest-xdist>=3.3.1,<4.0.0",
    "pytest-html>=4.0.0,<5.0.0",
    "pytest-timeout>=2.1.0,<3.0.0",
    
    # Code quality
    "black>=23.7.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.4.0,<2.0.0",
    "ruff>=0.0.280,<1.0.0",
    "pre-commit>=3.3.0,<4.0.0",
    
    # Documentation
    "mkdocs>=1.4.3,<2.0.0",
    "mkdocs-material>=9.1.15,<10.0.0",
    "mkdocstrings[python]>=0.22.0,<1.0.0",
    "mkdocs-autorefs>=0.4.1,<1.0.0",
    "mkdocs-jupyter>=0.24.1,<1.0.0",
    "mkdocs-minify-plugin>=0.6.4,<1.0.0",
    "mkdocs-redirects>=1.1.2,<2.0.0",
    
    # Type stubs
    "types-requests>=2.28.0,<3.0.0",
]

docs = [
    "mkdocs>=1.4.3,<2.0.0",
    "mkdocs-material>=9.1.15,<10.0.0",
    "mkdocstrings[python]>=0.22.0,<1.0.0",
    "mkdocs-autorefs>=0.4.1,<1.0.0",
    "mkdocs-jupyter>=0.24.1,<1.0.0"
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[lint]
select = [
    "F",   # Pyflakes (The basics)
    "E",   # Pycodestyle errors
    "W",   # Pycodestyle warnings
    "I",   # Isort (Keeps imports clean)
    "N",   # Pep8-naming (Keeps ontology consistent)
    "UP",  # Pyupgrade (Modern syntax)
    "B",   # Flake8-bugbear (Logic traps)
    "C4",  # Flake8-comprehensions (Efficient data structures)
    "ARG", # Flake8-unused-arguments (Prevents cruft)
    "PTH", # Flake8-use-pathlib (Modern filesystem)
    "ERA", # Eradicate (Removes commented-out code)
]
ignore = ["E501"]

[lint.flake8-bugbear]
extend-immutable-calls = ["fastmcp.FastMCP"]

[lint.isort]
force-single-line = true
known-first-party = ["inkscape_mcp"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Advanced analysis dependencies
analysis = [
    "scipy>=1.10.0,<2.0.0",  # For image quality metrics
]

all = [
    "inkscape-mcp[http,analysis]"
]

# MCP Server Configuration
[tool.fastmcp]
name = "inkscape-mcp"
display_name = "Inkscape MCP Server"
version = "1.2.0b0"
description = "FastMCP 2.14.3+ server for professional vector graphics using Inkscape - portmanteau architecture"
entry_point = "inkscape_mcp.main:main"
architecture = "portmanteau"


# Core Image File Tools
[[tool.dxt.tools]]
name = "load_image"
description = "Load an image file and return metadata"
category = "files"

[[tool.dxt.tools]]
name = "save_image"
description = "Save processed image to specified format"
category = "files"

[[tool.dxt.tools]]
name = "get_image_info"
description = "Extract comprehensive image metadata"
category = "files"

[[tool.dxt.tools]]
name = "convert_format"
description = "Convert image between different formats"
category = "files"

# Transform Tools
[[tool.dxt.tools]]
name = "resize_image"
description = "Resize image with quality preservation"
category = "transform"

[[tool.dxt.tools]]
name = "crop_image"
description = "Crop image to specified rectangle"
category = "transform"

[[tool.dxt.tools]]
name = "rotate_image"
description = "Rotate image by specified degrees"
category = "transform"

# Color Adjustment Tools
[[tool.dxt.tools]]
name = "adjust_brightness_contrast"
description = "Adjust brightness and contrast"
category = "color"

[[tool.dxt.tools]]
name = "adjust_hue_saturation"
description = "Adjust HSL color values"
category = "color"

[[tool.dxt.tools]]
name = "color_balance"
description = "Professional color balance adjustment"
category = "color"

# Filter Tools
[[tool.dxt.tools]]
name = "apply_blur"
description = "Apply blur effect with specified method"
category = "filters"

[[tool.dxt.tools]]
name = "apply_sharpen"
description = "Unsharp mask sharpening"
category = "filters"

[[tool.dxt.tools]]
name = "noise_reduction"
description = "Intelligent noise reduction"
category = "filters"

# Batch Processing Tools
[[tool.dxt.tools]]
name = "batch_resize"
description = "Resize multiple images"
category = "batch"

[[tool.dxt.tools]]
name = "batch_convert"
description = "Convert multiple images to target format"
category = "batch"

[tool.dxt.config]
log_level = "INFO"
max_workers = 4
request_timeout = 60.0
gimp_timeout = 30.0
